--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="index.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+        <script src="./scripts/index.js"></script>
         <script src="./scripts/clock.js"></script>
         <script src="./scripts/stopwatch.js"></script>
         <title>Simple timer</title>
@@ -15,9 +19,9 @@
         <div>
             <h1>Stopwatch</h1>
             <div id="stopwatch">00:00:00</div>
-            <button onclick="startStopwatch(true)">Start</button>
-            <button onclick="startStopwatch(false)">Stop</button>
-            <button onclick="clearStopwatch()">Restart</button>
+            <button class="btn" id="btnStart" onclick="startStopwatch(true)">Start</button>
+            <button class="btn" onclick="startStopwatch(false)">Stop</button>
+            <button class="btn" onclick="clearStopwatch()">Restart</button>
         </div>
     </body>
 </html>
