--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <body onload="startTime()">
         <div>
             <h1>Clock</h1>
-            <div id="clock">00:00:00</div>
+            <div id="clock_time">00:00:00</div>
+            <div id="clock_date">DD:MM:YYYY</div>
         </div>
         <div>
             <h1>Stopwatch</h1>
