Add round function to stopwatch

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <button class="btn" id="btnStart" onclick="startStopwatch(true)">Start</button>
             <button class="btn" onclick="startStopwatch(false)">Stop</button>
             <button class="btn" onclick="clearStopwatch()">Restart</button>
+            <button class="btn" onclick="addRound()">Round</button>
+            <div id="roundList"></div>
         </div>
     </body>
 </html>
