Add new functions to countdown

--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
                     <input class="inputCountdown" id="inputSecond" type="number" min="0" max="60"/>
                     <p>Second</p>
                 </div>
+                <div id="inputBtn">
+                    <button class="btn" id="countdownStartbtn" onclick="sendToCountdown()">Start</button>
+                    <button class="btn" id="countdownStopbtn">Stop</button>
+                    <button class="btn" onclick="restartCountdown()">Restart</button>
+                </div>
             </div>
         </div>
     </body>
