Finish countdown function

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
                 <div id="inputBtn">
                     <button class="btn" id="countdownStartbtn" onclick="sendToCountdown()">Start</button>
-                    <button class="btn" id="countdownStopbtn">Stop</button>
+                    <button class="btn" id="countdownStopbtn" onclick="stopCountdown()">Stop</button>
                     <button class="btn" onclick="restartCountdown()">Restart</button>
                 </div>
             </div>
